; ModuleID = '/home/carl/AnghaBench/linux/drivers/xen/extr_platform-pci.c_alloc_xen_mmio.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/xen/extr_platform-pci.c_alloc_xen_mmio.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@platform_mmio = common dso_local global i64 0, align 8
@platform_mmio_alloc = common dso_local global i64 0, align 8
@platform_mmiolen = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64)* @alloc_xen_mmio to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @alloc_xen_mmio(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %4 = load i64, i64* @platform_mmio, align 8
  %5 = load i64, i64* @platform_mmio_alloc, align 8
  %6 = add i64 %4, %5
  store i64 %6, i64* %3, align 8
  %7 = load i64, i64* %2, align 8
  %8 = load i64, i64* @platform_mmio_alloc, align 8
  %9 = add i64 %8, %7
  store i64 %9, i64* @platform_mmio_alloc, align 8
  %10 = load i64, i64* @platform_mmio_alloc, align 8
  %11 = load i64, i64* @platform_mmiolen, align 8
  %12 = icmp ugt i64 %10, %11
  %13 = zext i1 %12 to i32
  %14 = call i32 @BUG_ON(i32 %13)
  %15 = load i64, i64* %3, align 8
  ret i64 %15
}

declare dso_local i32 @BUG_ON(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
